--- a/templates/reportes/cta_cte/cta_cte_proveedores.html
+++ b/templates/reportes/cta_cte/cta_cte_proveedores.html
@@ -25,10 +25,13 @@
                                 <div class="col-sm-2">{% bootstrap_field form.estado  %}</div>                                                                                           
                                 <div class="col-sm-1"><button class="btn btn-sm blue-hoki" type="submit">Buscar</button></div>
                             </div>     
-                            </form>                    
                         </div>
                     </div>
-                    
+                    <button value="Imprimir" target="_blank" name="submit" type="submit" class="btn btn-sm blue-hoki" style="float:left;margin-right:20px;margin-bottom:10px;">
+                         <i class="fa fa-print fa-fw"></i>  Imprimir Listado
+                    </button>
+                        
+                    </form>
                     <table id="dataTables-cpb_venta" class="table table-striped compact table-hover table-no-bordered tabla_nueva">         
                         <thead>
                             <tr>                               
