--- a/templates/reportes/cta_cte/cta_cte_proveedores.html
+++ b/templates/reportes/cta_cte/cta_cte_proveedores.html
@@ -27,7 +27,7 @@
                             </div>     
                         </div>
                     </div>
-                    <button value="Imprimir" target="_blank" name="submit" type="submit" class="btn btn-sm blue-hoki" style="float:left;margin-right:20px;margin-bottom:10px;">
+                    <button value="Imprimir" formtarget="_blank" name="submit" type="submit" class="btn btn-sm blue-hoki" style="float:left;margin-right:20px;margin-bottom:10px;">
                          <i class="fa fa-print fa-fw"></i>  Imprimir Listado
                     </button>
                         
