--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -138,7 +138,7 @@ var tabla = $('#dataTables-stock').DataTable({
                   "targets"  : 'no-sort',
                   "orderable": false,
                 }],          
-           "paging":   true,
+           "paging":   false,
            "lengthMenu": [[50, -1], [50, "Todos"]],
            "autoWidth": false,           
            "order": [],
