--- a/templates/productos/producto_precios.html
+++ b/templates/productos/producto_precios.html
@@ -244,7 +244,7 @@ var tabla = $('#dataTables-lprecios').DataTable({
                // this.api().columns().every( function () {[0, 1, 9]
                 this.api().columns([3,4]).every( function () {
                     var column = this;
-                    var select = $('<select class="form-control"><option value=""></option></select>')
+                    var select = $('<select class="form-control"><option value="">Todos</option></select>')
                         .appendTo( $(column.footer()).empty() )
                         .on( 'change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
