--- a/templates/entidades/lista_vendedores.html
+++ b/templates/entidades/lista_vendedores.html
@@ -200,7 +200,7 @@ var tabla = $('#dataTables-primary').DataTable({
                // this.api().columns().every( function () {[0, 1, 9]
                 this.api().columns([4,5]).every( function () {
                     var column = this;
-                    var select = $('<select class="form-control"><option value=""></option></select>')
+                    var select = $('<select class="form-control"><option value="">Todos</option></select>')
                         .appendTo( $(column.footer()).empty() )
                         .on( 'change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
