--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -273,7 +273,7 @@ var tabla = $('#dataTables-cpb_movimientos').DataTable({
                // this.api().columns().every( function () {[0, 1, 9]
                 this.api().columns([4,5,6,10,13]).every( function () {
                     var column = this;
-                    var select = $('<select class="form-control"><option value=""></option></select>')
+                    var select = $('<select class="form-control"><option value="">Todos</option></select>')
                         .appendTo( $(column.footer()).empty() )
                         .on( 'change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
