--- a/templates/general/pto_vta/pto_vta_listado.html
+++ b/templates/general/pto_vta/pto_vta_listado.html
@@ -299,7 +299,7 @@ $(document).ready(function() {
                // this.api().columns().every( function () {[0, 1, 9]
                 this.api().columns([0,1,2]).every( function () {
                     var column = this;
-                    var select = $('<select class="form-control"><option value=""></option></select>')
+                    var select = $('<select class="form-control"><option value="">Todos</option></select>')
                         .appendTo( $(column.footer()).empty() )
                         .on( 'change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
